<resources>
    <string name="app_name">Pokemon Dex</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="label_dex_fragment">Pokemon Dex</string>
    <string name="title_menu_toolbox">Toolbox</string>
    <string name="title_menu_main">Main</string>
    <string name="title_menu_pokemon_dex">Dex</string>
    <string name="notification_title_init_database">Initializing Database</string>
    <string name="search">Search</string>
    <string name="pokemon_search_filter">Pokemon Search Filter</string>
    <string name="filter">Filter</string>
    <string name="regional_variant">Regional Variant</string>
    <string name="pokemon_type">Pokemon Type</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="nine">nine</string>
    <string name="generation">Generation %s</string>
    <string name="generation_simple">Gen%d</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defence">Defence</string>
    <string name="special_attack">Sp.Atk</string>
    <string name="special_defence">Sp.Def</string>
    <string name="speed">Speed</string>
    <string name="total">Total</string>
    <string name="level">Level</string>
    <string name="nature">Nature</string>
    <string name="description_pokemon_icon">Pokemon Icon</string>
    <string name="no_data">NO DATA</string>
    <string name="base_points">Base Points</string>
    <string name="species_strength">Species Strength</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="content_pokemon_image">Pokemon Image</string>
    <string name="basic_info">Basic Info</string>
    <string name="body_ball">Ball</string>
    <string name="body_snake">Snake</string>
    <string name="body_fish">Fish</string>
    <string name="body_dual_hands">Dual Hands</string>
    <string name="body_pillar">Pillar</string>
    <string name="body_dual_foots_monster">Dual Foots Monster</string>
    <string name="body_dual_legs">Dual Legs</string>
    <string name="body_quadruple_foots_monster">Quadruple Foots Monster</string>
    <string name="body_dual_wings">Dual Wings</string>
    <string name="body_tentacle">Tentacle</string>
    <string name="body_bundle">Bundle</string>
    <string name="body_human">Human</string>
    <string name="body_multi_wings">Multi Wings</string>
    <string name="body_bug">Bugs</string>
    <string name="body_unknown">Unknown</string>
    <string name="content_pokemon_body_icon">Pokemon Body Icon</string>
    <string name="catch_rate">Catch Rate</string>
    <string name="body">Body</string>
    <string name="type_normal">Normal</string>
    <string name="type_flying">Flying</string>
    <string name="type_fire">Fire</string>
    <string name="type_psychic">Psychic</string>
    <string name="type_water">Water</string>
    <string name="type_bug">Bug</string>
    <string name="type_electric">Electric</string>
    <string name="type_rock">Rock</string>
    <string name="type_grass">Grass</string>
    <string name="type_ghost">Ghost</string>
    <string name="type_ice">Ice</string>
    <string name="type_dragon">Dragon</string>
    <string name="type_fighting">Fighting</string>
    <string name="type_dark">Dark</string>
    <string name="type_poison">Poison</string>
    <string name="type_steel">Steel</string>
    <string name="type_ground">Ground</string>
    <string name="type_fairy">Fairy</string>
    <string name="egg_group_monster">Monster</string>
    <string name="egg_group_water_1">Water 1</string>
    <string name="egg_group_bug">Bug</string>
    <string name="egg_group_flying">Flying</string>
    <string name="egg_group_field">Field</string>
    <string name="egg_group_fairy">Fairy</string>
    <string name="egg_group_grass">Grass</string>
    <string name="egg_group_human_like">Human-Like</string>
    <string name="egg_group_water_3">Water 3</string>
    <string name="egg_group_mineral">Mineral</string>
    <string name="egg_group_amorphous">Amorphous</string>
    <string name="egg_group_water_2">Water 2</string>
    <string name="egg_group_ditto">Ditto</string>
    <string name="egg_group_dragon">Dragon</string>
    <string name="egg_group_undiscovered">Undiscovered</string>
    <string name="egg_group_gender_unknown">Gender Unknown</string>
    <string name="content_description_pokemon_icon">Pokemon Icon</string>
    <string name="content_description_pokemon_body">Pokemon Body</string>
    <string name="ability_1">Ability 1</string>
    <string name="ability_2">Ability 2</string>
    <string name="ability_hidden">Hidden Ability</string>
    <string name="abilities">Abilities</string>
    <string name="check_update">Check Update</string>
    <string name="auto_check_update">Check Update On Start</string>
    <string name="egg_group_1">Egg Group 1</string>
    <string name="egg_group_2">Egg Group 2</string>
    <string name="egg_cycle">Egg Cycle</string>
    <string name="egg_info">Egg Info</string>
    <string name="toast_checking_update">Checking Update…</string>
    <string name="toast_update_available">Update Available %s</string>
    <string name="toast_no_update_available">No Update Available</string>
    <string name="variably">Variably</string>
    <string name="game_red">Red</string>
    <string name="game_green">Green</string>
    <string name="game_blue">Blue</string>
    <string name="game_yellow">Yellow</string>
    <string name="game_gold">Gold</string>
    <string name="game_silver">Silver</string>
    <string name="game_crystal">Crystal</string>
    <string name="game_ruby">Ruby</string>
    <string name="game_sapphire">Sapphire</string>
    <string name="game_fire_red">Fire Red</string>
    <string name="game_leaf_green">Leaf Green</string>
    <string name="game_emerald">Emerald</string>
    <string name="game_diamond">Diamond</string>
    <string name="game_pearl">Pearl</string>
    <string name="game_platinum">Platinum</string>
    <string name="game_heart_gold">Heart Gold</string>
    <string name="game_soul_silver">Soul Silver</string>
    <string name="game_black">Black</string>
    <string name="game_white">White</string>
    <string name="game_black_2">Black 2</string>
    <string name="game_white_2">White 2</string>
    <string name="game_x">X</string>
    <string name="game_y">Y</string>
    <string name="game_omega_ruby">Omege Ruby</string>
    <string name="game_alpha_sapphire">Alpha Sapphire</string>
    <string name="game_sun">Sun</string>
    <string name="game_moon">Moon</string>
    <string name="game_ultra_sun">Ultra Sun</string>
    <string name="game_ultra_moon">Ultra Moon</string>
    <string name="game_lets_go_pikachu">Let\'s Go, Pikachu</string>
    <string name="game_lets_go_eevee">Let\'s Go, Eevee</string>
    <string name="game_sword">Sword</string>
    <string name="game_shield">Shield</string>
    <string name="game_brilliant_diamond">Brilliant Diamond</string>
    <string name="game_shining_pearl">Shining Pearl</string>
    <string name="game_legends_arceus">Legends: Arceus</string>
</resources>