<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:src="@drawable/test_image"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerVertical"
            android:dividerPadding="8dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_standard">

<!--                <TextView-->
<!--                    android:id="@+id/pokemon_name"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"-->
<!--                    tools:text="喷火龙" />-->

                <TextView
                    android:id="@+id/pokemon_jp_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    tools:text="喷火龙" />

                <TextView
                    android:id="@+id/pokemon_en_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    tools:text="喷火龙" />
            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_marginVertical="@dimen/margin_standard"
                android:columnCount="6">

                <TextView
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/hp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/attack"
                    android:textStyle="bold" />

                <TextView
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/defence"
                    android:textStyle="bold" />

                <TextView
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/special_attack"
                    android:textStyle="bold" />

                <TextView
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/special_defence"
                    android:textStyle="bold" />

                <TextView
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/speed"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ev_hp"
                    android:layout_height="@dimen/ev_cell_height"
                    android:layout_columnWeight="1"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/ev_attack"
                    android:layout_height="@dimen/ev_cell_height"
                    android:layout_columnWeight="1"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/ev_defence"
                    android:layout_height="@dimen/ev_cell_height"
                    android:layout_columnWeight="1"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/ev_special_attack"
                    android:layout_height="@dimen/ev_cell_height"
                    android:layout_columnWeight="1"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/ev_special_defence"
                    android:layout_height="@dimen/ev_cell_height"
                    android:layout_columnWeight="1"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/ev_speed"
                    android:layout_height="@dimen/ev_cell_height"
                    android:layout_columnWeight="1"
                    android:gravity="center" />
            </GridLayout>

            <com.kerite.pokedex.ui.widgets.PokemonStrengthWidget
                android:id="@+id/pokemon_strength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_standard" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
