<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_middle"
        android:layout_marginVertical="@dimen/margin_standard"
        android:columnCount="3">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ability_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:text="威吓" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ability_2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:text="威吓" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ability_hidden"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:text="威吓" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/ability_1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/ability_2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/ability_hidden" />
    </GridLayout>
</com.google.android.material.card.MaterialCardView>